[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resk-flag"
version = "0.1.0"
description = "A Python library combining symbolic trees with AI generative models using flags for reasoning analysis"
authors = [
    {name = "Resk Security", email = "contact@resk-security.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Resk-Security/resk-flag"
Repository = "https://github.com/Resk-Security/resk-flag"
Issues = "https://github.com/Resk-Security/resk-flag/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["resk_flag*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"